[tool.poetry]
name = "typer-config"
version = "1.4.2"
description = "Utilities for working with configuration files in typer CLIs. "
authors = ["Matt Anderson <matt@manderscience.com>"]
readme = "README.md"
license = "MIT"
packages = [
        {include = "typer_config"},
        {include = "typer_config/py.typed"}
    ]
repository = "https://github.com/maxb2/typer-config"
documentation = "https://maxb2.github.io/typer-config/"
homepage = "https://maxb2.github.io/typer-config/"
keywords = [
        "typer",
        "config",
        "configuration",
        "configuration-file",
        "yaml",
        "toml",
        "json",
        "dotenv",
        "cli"
    ]
classifiers = [
        "Intended Audience :: Information Technology",
        "Intended Audience :: System Administrators",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development",
        "Typing :: Typed",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: MIT License"
    ]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0"
toml = {version = "^0.10.2", optional = true}
pyyaml = {version = "^6.0", optional = true}
python-dotenv = {version = "*", optional = true}

[tool.poetry.extras]
python-dotenv = ["python-dotenv"]
toml = ["toml"]
yaml = ["pyyaml"]
all = ["toml", "pyyaml", "python-dotenv"]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.263,<0.7.3"
pylint = ">=2.17.3,<4.0.0"
black = ">=23.3,<25.0"
isort = "^5.12.0"
pytest = ">=7.3.1,<9.0.0"
mypy = "^1.2.0"
types-toml = "^0.10.8.6"
types-pyyaml = "^6.0.12.9"
git-changelog = ">=1.0.1,<3.0.0"
duty = ">=0.11,<1.5"
pytest-cov = ">=4,<6"
safety = ">=2.3.5,<4.0.0"
griffe = ">=0.32.2,<1.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.9"
mkdocstrings = {extras = ["python"], version = ">=0.21.2,<0.26.0"}
mike = ">=1.1.2,<3.0.0"
mkdocs-gen-files = "^0.5.0"
pydantic = ">=1.10.7,<3.0.0"
blacken-docs = { git = "https://github.com/maxb2/blacken-docs.git", rev = "e82e9e9e1eeee37fd89b9c2d6e3c99cf0aa2d399" }
schema = "^0.7.5"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.ruff.lint]
extend-select = [ # https://beta.ruff.rs/docs/rules/
    "A", 
    "ANN",
    "ARG", 
    "B",
    "BLE",
    "C4", 
    "D", 
    "E",
    "EM",
    "ERA", 
    "F",
    "FA",
    "FBT", 
    "FIX", 
    "I", 
    "ISC", 
    "ICN", 
    "INP", 
    "PERF", 
    "PIE", 
    "PL", 
    "PT", 
    "Q", 
    "RSE", 
    "RET", 
    "RUF",
    "S",
    "SIM", 
    "T10", 
    "T20", 
    "TCH", 
    "TD", 
    "TID",
    "YTT"]
extend-ignore = ["D202", "D205", "D107"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN", "S", "ARG001", "B008", "RUF015"]
"tests/doc_examples.py" = ["FA100"]
"docs_gen_files.py" = ["ANN201"]
"duties.py" = ["ANN201", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"