[project]
name = "typer-config"
version = "1.5.1"
description = "Utilities for working with configuration files in typer CLIs. "
authors = [
    { name = "Matt Anderson", email = "matt@mandersience.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
repository = "https://github.com/maxb2/typer-config"
documentation = "https://maxb2.github.io/typer-config/"
homepage = "https://maxb2.github.io/typer-config/"
keywords = [
        "typer",
        "config",
        "configuration",
        "configuration-file",
        "yaml",
        "toml",
        "json",
        "dotenv",
        "cli"
    ]
classifiers = [
        "Intended Audience :: Information Technology",
        "Intended Audience :: System Administrators",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development",
        "Typing :: Typed",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "License :: OSI Approved :: MIT License"
    ]

requires-python = ">=3.10"
dependencies = [
    "typer==0.*",
]

[project.optional-dependencies]
all = [
    "python-dotenv>=0",
    "toml>=0.10.2,<1",
    "pyyaml==6.*",
]
python-dotenv = [
    "python-dotenv>=0",
]
toml = [
    "toml>=0.10.2,<1",
]
yaml = [
    "pyyaml==6.*",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=7.0.0",
    "mike>=2.1.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "schema>=0.7.7",
    "ty>=0.0.16",
]

[tool.ruff.lint]
extend-select = [ # https://beta.ruff.rs/docs/rules/
    "A", 
    "ANN",
    "ARG", 
    "B",
    "BLE",
    "C4", 
    "D", 
    "E",
    "EM",
    "ERA", 
    "F",
    "FA",
    "FBT", 
    "FIX", 
    "I", 
    "ISC", 
    "ICN", 
    "INP", 
    "PERF", 
    "PIE", 
    "PL", 
    "PT", 
    "Q", 
    "RSE", 
    "RET", 
    "RUF",
    "S",
    "SIM", 
    "T10", 
    "T20", 
    "TCH", 
    "TD", 
    "TID",
    "YTT"]
extend-ignore = ["D202", "D205", "D107"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN", "S", "ARG001", "B008", "RUF015"]
"tests/doc_examples.py" = ["FA100"]
"docs_gen_files.py" = ["ANN201"]
"duties.py" = ["ANN201", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.pytest.ini_options]
addopts = "-p no:warnings"
